--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,1 +1,10 @@
+/* styles.css */
 
+div {
+  color: white;
+  background-color: red;
+  
+  font-size: 22px
+  text-align: center
+  font-weight: bold 
+}
